- Update libs.versions.toml - Apply spotless to internal-convention-plugin - Add .gitattributes