@@ -17,16 +17,18 @@ class InternalProperties {
     }
 
     public String getLib(String name) {
-        return versionCatalog.findLibrary(name)
-            .map(maybeLib -> maybeLib.map(lib -> String.format("%s:%s:%s", lib.getGroup(), lib.getName(), lib.getVersion())))
-            .map(Provider::getOrNull)
-            .orElseThrow(() -> new IllegalStateException("Unable to find library [%s]".formatted(name)));
-
+        return versionCatalog
+                .findLibrary(name)
+                .map(maybeLib ->
+                        maybeLib.map(lib -> String.format("%s:%s:%s", lib.getGroup(), lib.getName(), lib.getVersion())))
+                .map(Provider::getOrNull)
+                .orElseThrow(() -> new IllegalStateException("Unable to find library [%s]".formatted(name)));
     }
 
     public String getVersion(String name) {
-        return versionCatalog.findVersion(name)
-            .map(VersionConstraint::getRequiredVersion)
-            .orElseThrow(() -> new IllegalStateException("Unable to find version [%s]".formatted(name)));
+        return versionCatalog
+                .findVersion(name)
+                .map(VersionConstraint::getRequiredVersion)
+                .orElseThrow(() -> new IllegalStateException("Unable to find version [%s]".formatted(name)));
     }
 }
